<resources>
    <string name="app_name">Finmov</string>
    <string name="now_showing">Now Showing</string>
    <string name="movies_in">Movies in</string>
    <string name="all_movies">All Movies</string>
    <string name="view_all">View All</string>
    <string name="no_movies">No Movies</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="runtime">Runtime</string>
    <string name="overview">Overview</string>
    <string name="genres">Genres</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="crew">Crews</string>
    <string name="cast">Casts</string>
    <string name="see_a_review">See a review</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="original_language">Original Language</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="recommendation_movies">Recommendation Movies</string>
    <string name="result">Result</string>
</resources>
